--- a/ohhShoot/css/style.css
+++ b/ohhShoot/css/style.css
@@ -137,7 +137,7 @@ ol {
   bottom: 0;
   height: 5px;
   width: 70px;
-  background: #00bfe7;
+  background: white;
   content: "";
 }
 
@@ -192,8 +192,8 @@ ol {
   top: 0;
   height: 30px;
   width: 30px;
-  border-left: 2px solid #00bfe7;
-  border-top: 2px solid #00bfe7;
+  border-left: 2px solid white;
+  border-top: 2px solid white;
   content: "";
   z-index: -1;
   -webkit-transition: all, 0.7s;
@@ -206,8 +206,8 @@ ol {
   bottom: 0;
   height: 30px;
   width: 30px;
-  border-right: 2px solid #00bfe7;
-  border-bottom: 2px solid #00bfe7;
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
   content: "";
   z-index: -1;
   -webkit-transition: all, 0.7s;
@@ -218,7 +218,7 @@ ol {
 .site-btn {
   font-size: 15px;
   color: #ffffff;
-  background: #00bfe7;
+  background: white;
   font-family: "Play", sans-serif;
   font-weight: 700;
   border: none;
@@ -386,7 +386,7 @@ ol {
   bottom: 0;
   width: 100%;
   height: 2px;
-  background: #00bfe7;
+  background: white;
   content: "";
   -webkit-transform: scale(0);
       -ms-transform: scale(0);
@@ -615,7 +615,7 @@ ol {
   Counter
 -----------------------*/
 .counter {
-  background: #100028;
+  background: black;
   height: 840px;
   padding-top: 380px;
   overflow: hidden;
@@ -811,7 +811,7 @@ ol {
   margin-right: 10px;
 }
 .latest__slider.owl-carousel .owl-dots button.active {
-  background: #00bfe7;
+  background: white;
 }
 .latest__slider.owl-carousel .owl-dots button:last-child {
   margin-right: 0;
@@ -844,7 +844,7 @@ ol {
 }
 .callto__text a {
   color: #ffffff;
-  background: #00bfe7;
+  background: white;
   font-size: 15px;
   font-weight: 700;
   font-family: "Play", sans-serif;
@@ -963,7 +963,7 @@ ol {
   border: none;
   height: 50px;
   width: 50px;
-  background: #00bfe7;
+  background: white;
   line-height: 50px;
   text-align: center;
   position: absolute;
@@ -981,10 +981,10 @@ ol {
   font-weight: 300;
 }
 .footer__copyright__text i {
-  color: #00bfe7;
+  color: white;
 }
 .footer__copyright__text a {
-  color: #00bfe7;
+  color: white;
 }
 
 /*---------------------
@@ -1045,7 +1045,7 @@ ol {
   padding-left: 30px;
 }
 .about__text .services__item .services__item__icon:after {
-  border-color: #281A3E;
+  border-color: white;
 }
 
 .about__text__desc {
@@ -1074,7 +1074,7 @@ ol {
   margin-right: 10px;
 }
 .testimonial__slider.owl-carousel .owl-dots button.active {
-  background: #00bfe7;
+  background: white;
 }
 .testimonial__slider.owl-carousel .owl-dots button:last-child {
   margin-right: 0;
@@ -1129,7 +1129,7 @@ ol {
   Services
 -----------------------*/
 .services {
-  background: #100028;
+  background: black;
   padding-bottom: 60px;
   padding-top: 110px;
 }
@@ -1170,7 +1170,7 @@ ol {
   top: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid #00bfe7;
+  border: 2px solid white;
   content: "";
   -webkit-transition: all, 0.5s;
   -o-transition: all, 0.5s;
@@ -1219,7 +1219,7 @@ ol {
   padding: 6px 22px;
 }
 .portfolio__filter li.active {
-  border: 1px solid #00bfe7;
+  border: 1px solid white;
 }
 .portfolio__filter li:last-child {
   margin-right: 0;
@@ -1500,7 +1500,7 @@ ol {
 }
 .blog__details__quote i {
   font-size: 36px;
-  color: #00bfe7;
+  color: white;
   position: absolute;
   right: 30px;
   bottom: 25px;
@@ -1936,7 +1936,7 @@ ol {
     position: absolute;
     right: 10px;
     top: 26px;
-    background: #00bfe7;
+    background: white;
   }
 
   .header .container {
@@ -2058,7 +2058,7 @@ ol {
     position: absolute;
     right: 10px;
     top: 26px;
-    background: #00bfe7;
+    background: white;
   }
 
   .header .container {
